--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,8 @@ jobs:
           node --version
           echo NPM:
           npm --version
-      - name: NPM audit
+      - name: NPM audit NOTE TEMPORARILY WILL NOT FAIL BUILDS
+        continue-on-error: true # Allow DoS node-sass vulnerability https://npmjs.com/advisories/961
         run: npm audit
       - name: NPM install (ci)
         run: npm ci
